# substrate-lfs

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md
client/: Cargo.toml
client/http-server/: Cargo.toml
client/http-server/src/: helpers.rs  lib.rs  traits.rs  user_data.rs
client/rpc/: Cargo.toml
client/rpc/src/: lib.rs
client/simple-cache/: Cargo.toml
client/simple-cache/src/: disk.rs  lib.rs  lru_cache.rs  memory.rs
client/src/: cache.rs  config.rs  lfs_id.rs  lib.rs  rpc.rs
demo/: Cargo.toml  README.md
demo/example_data/personal_site/: index.html
demo/example_data/personal_site/assets/css/: main.css
demo/example_data/website/: index.html
demo/rpc-client/: Cargo.toml
demo/rpc-client/src/: main.rs
demo/runtime/: Cargo.toml
demo/runtime/src/: avatars.rs  lib.rs  template.rs
demo/src/: chain_spec.rs  cli.rs  command.rs  http_proxy.rs  main.rs  service.rs
palett/: Cargo.toml
palett/src/: lib.rs
pallet/: Cargo.toml
pallet/src/: lib.rs
pallets/: Cargo.toml  README.md
pallets/avatars/: Cargo.toml
pallets/avatars/src/: lib.rs
pallets/src/: lib.rs
pallets/user-data/: Cargo.toml
pallets/user-data/src/: lib.rs
primitives/cache/: Cargo.toml
primitives/cache/src/: lib.rs  shared.rs
primitives/core/: Cargo.toml
primitives/core/src/: lib.rs
srml-lfs/: Cargo.toml  README.md
srml-lfs/src/: lib.rs
substrate-lfs/: Cargo.toml
substrate-lfs-demo/: Cargo.toml
substrate-lfs-demo-runtime/: Cargo.toml
substrate-lfs-demo-runtime/src/: lib.rs
substrate-lfs-demo/src/: service.rs
