[workspace]
members = [
    # primitives
    "primitives/core",
    "primitives/cache",

    # client
    "client/simple-cache",
    "client/http-server",
    "client",

    # frame core pallet
    "pallets",
    # custom frame palletts
    "pallets/user-data",

    # demo implementation
    "demo/runtime",
    "demo/rpc-client",
    "demo",
]

default-members = ["demo"]
