[package]
name = "sc-lfs"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Large File Storage for Substrate"
edition = "2018"

[dependencies.sp-lfs-cache]
path = "../primitives/cache"
features = ['std']

[dependencies.sc-lfs-simple-cache]
path = "./simple-cache"

[dependencies.sp-lfs-core]
path = "../primitives/core"
features = ["std"]

[dependencies]
libp2p = "0.13.1"
parking_lot = "0.10.0"
base64 = "0.11"
codec = { default-features = false, package = "parity-scale-codec", version = "1.1.2" }
sc-client-api = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sp-externalities = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }

# std
toml = { version = "0.5.5", optional = true }
serde = { version = "1.0", optional = true }

# feature: jsonrpc
jsonrpc-core = { version = "14.0.5", optional = true }
jsonrpc-core-client = { version = "14.0.5", optional = true }
jsonrpc-derive = { version = "14.0.5", optional = true }

# feature: with-blake3
blake3 = { version = "0.1.0", optional = true }

[features]
default = ["std", "jsonrpc"]
unstable = ["with-blake3"]

std = [
    "sp-lfs-core/std",
    "sp-runtime-interface/std",
    "codec/std",
    "blake3/std",
    "toml",
    "serde",
]

jsonrpc = [
    "jsonrpc-core",
    "jsonrpc-core-client",
    "jsonrpc-derive",
]

with-blake3 = [
    "blake3"
]