[package]
name = "pallet-lfs"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies.sp-lfs-core]
path = "../primitives/core"
default-features = false

[dependencies.sp-lfs-cache]
path = "../primitives/cache"
default-features = false

[dependencies]
serde = { version = "1.0", optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.1.2' }
support = { default-features = false, git = 'https://github.com/paritytech/substrate.git', package = 'frame-support', rev  = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }
system = { default-features = false, git = 'https://github.com/paritytech/substrate.git', package = 'frame-system', rev  = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }
rstd = { default-features = false, git = 'https://github.com/paritytech/substrate.git', package = 'sp-std', rev  = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", rev  = "3d108eaf57266e9c922c1cd159186bbd35c7d441" }
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev  = "3d108eaf57266e9c922c1cd159186bbd35c7d441"}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'rstd/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-lfs-cache/std',
    'sp-lfs-core/std',
]
