[package]
name = "srml-lfs"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'app_crypto/std'
]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.app_crypto]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = "substrate-application-crypto"
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dev-dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dev-dependencies.runtime-io]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'
