[package]
name = "srml-lfs"
version = "0.1.0"
authors = ["Anonymous"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '1.0.0' }
support = { default_features = false, git = 'https://github.com/paritytech/substrate.git', package = 'srml-support', rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8' }
system = { default_features = false, git = 'https://github.com/paritytech/substrate.git', package = 'srml-system', rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8' }
app_crypto = { default_features = false, git = 'https://github.com/paritytech/substrate.git', package = "substrate-application-crypto", rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8' }
rstd = { default_features = false, git = 'https://github.com/paritytech/substrate.git', package = 'sr-std', rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8' }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate", rev = "bbe90e31ed2fd71dc037fc385dae32584d2b1ce8", default_features = false }


[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dev-dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'

[dev-dependencies.runtime-io]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'bbe90e31ed2fd71dc037fc385dae32584d2b1ce8'


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'app_crypto/std'
]
