[package]
name = "substrate-lfs-demo"
version = "1.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[dependencies]
derive_more = "0.14.0"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.9.0"
parity-scale-codec = "1.0.0"
trie-root = "0.15.2"
substrate-lfs-demo-runtime = { path = "../substrate-lfs-demo-runtime" }
sr-io = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-lfs = { path = "../substrate-lfs" }
substrate-cli = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-executor = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-service = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-inherents = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-transaction-pool = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-network = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-consensus-babe = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-consensus-babe-primitives = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-finality-grandpa = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-finality-grandpa-primitives = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-client = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }
substrate-basic-authorship = { git = "https://github.com/paritytech/substrate", rev = "188480de4727f11bae126d706fc188b1435082dd" }

[build-dependencies]
vergen = "3"
