[package]
name = "sc-lfs-http-server"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"


[dependencies.sp-lfs-cache]
path = "../../primitives/cache"

[dependencies.sp-lfs-core]
path = "../../primitives/core"

[dependencies]
hyper = "0.13"
base64 = "0.11"
futures = "0.3.1"