[package]
name = "sc-lfs-http-server"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"


[dependencies.sp-lfs-cache]
path = "../../primitives/cache"

[dependencies.sp-lfs-core]
path = "../../primitives/core"

[dependencies.pallet-lfs-user-data]
path = "../../pallets/user-data"
optional = true

[dependencies]
hyper = "0.13"
base64 = "0.11"
futures = "0.3.1"
codec = { package = "parity-scale-codec", version = "1.1.2" }
sc-client = { version = "0.8.0", optional = true, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sc-client-api = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sp-core = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
sp-runtime = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
frame-system = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }
frame-support = { version = "2.0.0", optional = true, git = "https://github.com/paritytech/substrate", rev = "e65957e5efceea82d88f8b4e1248171eb3c2167e" }


[features]
default = []
user-data = [
    "sc-client",
    "sc-client-api",
    "sp-runtime/std",
    "sp-core/std",
    "frame-system/std",
    "frame-support/std",
    "pallet-lfs-user-data/std"
]