[package]
name = "sc-lfs-rpc"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sp-lfs-core]
path = "../../primitives/core"
default-features = false

[dependencies.sp-lfs-cache]
path = "../../primitives/cache"
default-features = false


[dependencies]
jsonrpc-core = "14.0.5"
jsonrpc-core-client = "14.0.5"
jsonrpc-derive = "14.0.5"
parking_lot = "0.10.0"