[package]
name = "sc-lfs-simple-cache"
version = "0.1.0"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sp-lfs-cache]
path = "../../primitives/cache"

[dependencies.sp-lfs-core]
path = "../../primitives/core"

[dependencies]
base64 = "0.11.0"
parking_lot = "0.10.0"
lru = "0.4.3"
